backend partially tested, working
